feat(api): openAPI code generator - poc (wip)
Signed-off-by: Patrik Gfeller <patrik.gfeller@proton.me>